@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.31 2007/11/08 20:09:03 reinoud Exp $
+$NetBSD: distinfo,v 1.32 2007/12/10 19:59:03 reinoud Exp $
 
-SHA1 (UDFclient.0.5.7.tgz) = 169d631800989b19c8db287300682ad8fb8a890e
-RMD160 (UDFclient.0.5.7.tgz) = 569e0ccc37dab7e027ee21156791f21bcce33f41
-Size (UDFclient.0.5.7.tgz) = 234205 bytes
+SHA1 (UDFclient.0.5.8.tgz) = f26cbe8219ec9615d80f637462f2471ce61bf252
+RMD160 (UDFclient.0.5.8.tgz) = 5054ec64b2fca2976a41266b76e7cf67dea9f6f7
+Size (UDFclient.0.5.8.tgz) = 234317 bytes
